--- a/php/handlers/main.yml
+++ b/php/handlers/main.yml
@@ -2,6 +2,6 @@
 # handlers file for php
  - name: Restart apache
    service:
-        name: http
+        name: httpd
         enabled: yes
         state: restarted
